--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GABRIEL 1 ANINHO</title>
+<title>Moldura Interativa - Studio Convites</title>
 
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -28,33 +28,43 @@
 
   #overlay { pointer-events: none; }
 
-  /* Botões principais redondos */
+  /* ⭐ BOTÕES RETANGULARES FOFO NUDE ⭐ */
   #buttons {
     position: absolute;
     bottom: 40px;
     width: 100%;
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 20px;
     z-index: 20;
   }
 
   #buttons button {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    padding: 16px 26px;
+    border-radius: 16px;
     border: none;
-    background: linear-gradient(135deg, #f8e9da, #f3d4bb);
-    font-size: 26px;
+
+    background: linear-gradient(145deg, #f8e9da, #f3d4bb);
     color: #5e4634;
+    font-size: 18px;
+    font-weight: 600;
+
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-    transition: 0.2s;
+
+    box-shadow:
+      0 6px 12px rgba(0,0,0,0.12),
+      inset 0 3px 4px rgba(255,255,255,0.5),
+      inset 0 -3px 6px rgba(0,0,0,0.05);
+
+    transition: 0.25s ease;
   }
 
-  #buttons button:active { transform: scale(0.95); }
+  #buttons button:active {
+    transform: scale(0.93);
+    filter: brightness(0.95);
+  }
 
-  /* PREVIEW TELA CHEIA */
+  /* PREVIEW EM TELA CHEIA */
   #preview-container {
     position: fixed;
     top: 0;
@@ -66,20 +76,18 @@
     z-index: 9999;
   }
 
-  /* BLOCO INTERNO DA FOTO + BOTÕES */
+  /* BLOCO DA FOTO + BOTÕES */
   #preview-content {
     position: absolute;
-    top: 4vh;  /* <<<<<< AJUSTE DE ALTURA DA MOLDURA */
+    top: 4vh; /* <<<<< Ajuste da altura da moldura */
     left: 50%;
     transform: translateX(-50%);
-
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  /* FOTO GRANDE NO PREVIEW */
   #photo-preview {
     max-width: 95%;
     max-height: 75vh;
@@ -119,6 +127,7 @@
     font-size: 14px;
     text-align: center;
   }
+
 </style>
 
 </head>
@@ -127,16 +136,16 @@
 <video id="video" autoplay playsinline muted></video>
 <img id="overlay" src="moldura.png" alt="Moldura"/>
 
+<!-- ⭐ BOTÕES RETANGULARES FOFO NUDE ⭐ -->
 <div id="buttons">
-  <button id="switch-camera">🔄</button>
-  <button id="capture">📸</button>
+  <button id="switch-camera">Câmera traseira</button>
+  <button id="capture">Tirar foto</button>
 </div>
 
 <canvas id="canvas" style="display:none;"></canvas>
 
 <!-- PREVIEW EM TELA CHEIA -->
 <div id="preview-container">
-
   <div id="preview-content">
 
     <img id="photo-preview">
@@ -149,7 +158,6 @@
     <div id="instructions">Toque e segure para salvar no iPhone.</div>
 
   </div>
-
 </div>
 
 <script>
@@ -162,7 +170,6 @@
   const captureBtn = document.getElementById("capture");
   const switchCameraBtn = document.getElementById("switch-camera");
   const previewContainer = document.getElementById("preview-container");
-  const previewContent = document.getElementById("preview-content");
   const photoPreview = document.getElementById("photo-preview");
   const saveBtn = document.getElementById("save-btn");
   const retryBtn = document.getElementById("retry-btn");
@@ -204,6 +211,7 @@
       ctx.scale(-1, 1);
     }
 
+    ctx.filter = "none";
     ctx.drawImage(video, 0, 0, w, h);
 
     ctx.setTransform(1, 0, 0, 1, 0, 0);
